--- a/dashboard.css
+++ b/dashboard.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Short+Stack&display=swap");
+*{
+    font-family: "short stack";
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .navigation {
     position: fixed;
     width: 300px;
@@ -28,7 +35,7 @@
   
 .navigation ul li:hover,
 .navigation ul li.hovered {
-    background-color: var(--white);
+    background-color: #ffffff;
 }
   
 .navigation ul li:nth-child(1) {
@@ -36,13 +43,14 @@
     pointer-events: none;
 }
   
-.navigation ul li a {
+.navigation ul li a{
     position: relative;
     display: block;
     width: 100%;
     display: flex;
     text-decoration: none;
     color: var(--white);
+    align-items: center;
 }
 .navigation ul li:hover a,
 .navigation ul li.hovered a {
@@ -57,7 +65,7 @@
     line-height: 75px;
     text-align: center;
 }
-.navigation ul li a .icon ion-icon {
+.navigation ul li a .bx{
     font-size: 1.75rem;
 }
   
