--- a/dashboard.css
+++ b/dashboard.css
@@ -147,17 +147,26 @@
 
 /* The cards */
 
-.cardBox {
+.cardCat {
     position: relative;
     width: 100%;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
-    align-items: center;
+    margin-top: 5%;
 }
-  
-.cardBox .card {
+
+.cardCat .cardCont {
+    position: relative;
+    padding: 30px;
+    border-radius: 20px;
+    justify-content: space-between;
+    cursor: pointer;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+/* .cardBox .card {
     position: relative;
     background: var(--white);
     padding: 30px;
@@ -193,4 +202,4 @@
 .cardBox .card:hover .cardName,
 .cardBox .card:hover .iconBx {
     color: var(--white);
-}
+} */
