--- a/index.css
+++ b/index.css
@@ -317,4 +317,5 @@ body main .form_container form button:hover {
     transform: scale(0.95);
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
-}/*# sourceMappingURL=index.css.map */
+}
+/*# sourceMappingURL=index.css.map */
