--- a/dashboard.css
+++ b/dashboard.css
@@ -9,11 +9,12 @@
     position: fixed;
     width: 300px;
     height: 100%;
-    background: blue;
-    border-left: 10px solid var(--blue);
+    background: rgb(51, 51, 137);
+    /* border-left: 10px solid var(--blue); */
     transition: 0.5s;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
+
 .navigation.active {
     width: 80px;
 }
@@ -72,11 +73,12 @@
 .navigation ul li a .title {
     position: relative;
     display: block;
-    padding: 0 10px;
+    /* padding: 0 10px;fffff */
     height: 60px;
     line-height: 60px;
     text-align: start;
-    white-space: nowrap;
+    white-space: wrap;
+    margin-top: 5%;
 }
   
   /* --------- curve outside ---------- */
@@ -151,10 +153,12 @@
     position: relative;
     width: 100%;
     padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    /* grid-template-columns: repeat(auto-fit, 200px, 1fr); */
+    gap: 30px;
     margin-top: 5%;
+    justify-content: center;
 }
 
 .cardCat .cardCont {
@@ -206,3 +210,58 @@
     color: #ffffff;
 }
 
+
+.All-Students-Table {
+    justify-content: center;
+    justify-items: center;
+}
+
+.three-student-modal {
+    background-color: blue;
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    -webkit-text-fill-color: #ffffff;
+    position: relative;
+}
+
+.top-three-students-modal {
+    position: relative;
+    width: 25%;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+    -webkit-text-fill-color: #ffffff;
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: 30%;
+}
+
+.modal-close {
+    background-color: blue;
+    width: 40%;
+    height: 30px;
+    align-items: center;
+    justify-self: center;
+    color: #ffffff;
+    font-size: 20px;
+    margin: 10%;
+    margin-left: 30%;
+}
+
+.the-table-header {
+    background-color: grey;
+}
+
+.table-content {
+    margin: 10%;
+}
+
+.dash-search {
+    width: 50%;
+    max-width: 100%;
+    height: 20px;
+}
